Import latest changes from J. Benner: year values

--- a/Diagramm.vcxproj
+++ b/Diagramm.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="AusblendenZeitreihen.cpp" />
     <ClCompile Include="Diagramm1.cpp" />
+    <ClCompile Include="Jahreswerte.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -163,6 +164,9 @@
     <ClInclude Include="Diagramm1.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="Jahreswerte.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
@@ -175,6 +179,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Diagramm1.resx">
       <DependentUpon>Diagramm1.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Jahreswerte.resx">
+      <DependentUpon>Jahreswerte.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
